# earth-os-atlas

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTNET.md  config.json  pyproject.toml
.github/workflows/: ci.yml  god_mode_receiver.yml  taqwa_net_core.yml
contracts/: ATLASToken.sol  GovernanceDAO.sol  ProofRegistry.sol
deploy/kubernetes/: testnet.yaml
deploy/monitoring/: grafana_dashboard.json
docs/architecture/: mermaid_diagram.md
sdk/go/: go.mod
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/typescript/: index.ts  package.json  types.ts
src/: __init__.py
src/agi/: __init__.py  neural_link.py  symbolic.py  value_detector.py
src/analytics_viz/: __init__.py  alerts.py  dashboards.py  forecasting.py  governance_analytics.py  reports.py  value_viz.py
src/api/: __init__.py  app.py  routes.py
src/atlas_core/: __init__.py  atlas_minting.py  validation_consensus.py  value_recognition.py
src/bridges/: __init__.py
src/cognitive_state/: __init__.py  memory_graph.py  state_machine.py  valence_tracker.py
src/congress/: __init__.py  argumentation.py  coalition.py  congress.py
src/constitution/: __init__.py  amendments.py  constitution.py  rights.py
src/cross_domain/: __init__.py  agriculture.py  education.py  gateway.py  (+3 more)
tests/: test_atlas_core.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase17.py  test_phase3.py  test_phase6.py  test_phase7.py  test_phase9.py  test_synaptic_mesh.py  test_titans.py
(+112 files in other folders)
