[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earth-os-atlas"
version = "3.0.0"
description = "The Living Economic Operating System. Proof-of-Value > Proof-of-Work."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "TITAN FORGE", email = "forge@kosasih.org"},
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "mypy"]

[project.scripts]
atlas = "earth_os_atlas.cli:main"

[project.urls]
Homepage = "https://github.com/KOSASIH/earth-os-atlas"
Repository = "https://github.com/KOSASIH/earth-os-atlas"
