[package]
name = "atlas-sdk"
version = "3.2.0"
edition = "2021"
description = "ATLAS Earth OS Rust SDK — Type-safe async client"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
mockito = "1.0"
